eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment
  labels:
    app: simple-bank-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
        - name: simple-bank-api
          image: 152615961931.dkr.ecr.ap-southeast-1.amazonaws.com/simplebank:d4c30d44998c6df48e09dd3626e315c4002d9c53
          ports:
            - containerPort: 8080
