eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-bank-ingress
spec:
  rules:
  - host: "a642d5609f4c74e8b8cbad16fe87273d-827298403.ap-southeast-1.elb.amazonaws.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: simple-bank-api-service
            port:
              number: 80
